<resources>
    <string name="app_name">ReuseMarketTest</string>
    <!--    <string name="web_client_id">603989171425-hr4sli9egfh5u00t1fpkvjlbpci3hc48.apps.googleusercontent.com</string>-->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="web_client_id">603989171425-hr4sli9egfh5u00t1fpkvjlbpci3hc48.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>